--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "keen-slider": "^6.8.6",
+    "lucide-vue-next": "^0.468.0",
     "pinia": "^2.2.7",
     "sass-embedded": "^1.81.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@iconify-json/carbon": "^1.2.5",
     "@vitejs/plugin-vue": "^5.2.1",
     "vite": "^6.0.1"
   }
