--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lucide-vue-next": "^0.468.0",
     "pinia": "^2.3.0",
     "sass-embedded": "^1.81.0",
+    "three": "^0.171.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
