--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "sass-embedded": "^1.81.0",
     "three": "^0.171.0",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue3-simple-icons": "^13.2.0"
   },
   "devDependencies": {
     "@iconify-json/carbon": "^1.2.5",
