--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "devDependencies": {
     "@iconify-json/carbon": "^1.2.5",
+    "@types/three": "^0.172.0",
     "@vitejs/plugin-vue": "^5.2.1",
-    "vite": "^6.0.1"
+    "vite": "^6.0.10"
   }
 }
