--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,16 +1,11 @@
 {
   "data": [
+
     {
-      "title": "Portfolio Page",
-      "text": "My portfolio page, making with Vue and Vite"
-    },
-    {
-      "title": "FEMC Page",
-      "text": "Far Eastern Minecraft Community page, making with Vue, TypeScript and Vite"
-    },
-    {
-      "title": "Mus9 Page",
-      "text": "I am creating the design for this project"
+      "title": "FEMC",
+      "text": "Far Eastern Minecraft Community page, making with Vue, TypeScript and Vite",
+      "link": "https://femc.space",
+      "linkGithub": "https://github.com/Yusheero/femc-page"
     }
   ]
 }
