--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,11 +1,33 @@
 {
   "data": [
-
     {
       "title": "FEMC",
       "text": "Far Eastern Minecraft Community page, making with Vue, TypeScript and Vite",
       "link": "https://femc.space",
-      "linkGithub": "https://github.com/Yusheero/femc-page"
+      "linkGithub": "https://github.com/Yusheero/femc-page",
+      "dateCreated": "10.06.2023",
+      "category": "web",
+      "technologies": ["Vue.js", "TypeScript", "Vite", "SCSS", "REST API"],
+      "readMore": "/projects/femc",
+      "features": [
+        "Адаптивный дизайн для всех устройств",
+        "Интеграция с Minecraft API",
+        "Анимированные переходы между страницами"
+      ]
+    },
+    {
+      "title": "Vue Portfolio",
+      "text": "Modern portfolio site built using Vue 3 and Composition API",
+      "link": "https://yusheero.ru",
+      "linkGithub": "https://github.com/Yusheero/yusheero-page",
+      "dateCreated": "15.04.2023",
+      "category": "web",
+      "technologies": ["Vue.js", "Composition API", "ThreeJS", "GSAP", "Docker"],
+      "features": [
+        "3D элементы и визуализация с Three.js",
+        "Анимации с GSAP",
+        "Оптимизированная производительность"
+      ]
     }
   ]
 }
