--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -18,7 +18,7 @@
     {
       "title": "Portfolio Page",
       "text": "Modern portfolio site built using Vue 3 and Composition API",
-      "link": "https://yusheero.ru",
+      "link": "https://yusheero.github.io/yusheero-page/",
       "linkGithub": "https://github.com/Yusheero/yusheero-page",
       "dateCreated": "15.04.2023",
       "category": "FRONTEND",
